# RBF

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  field.f90
main/: CMakeLists.txt  helper.f90  main.f90
rbf/: CMakeLists.txt  inverse_multiquadric.f90  rbf.f90  rbf_basic.f90  rbf_extended.f90
scripts/: check.py
view/: main.py
